# tax-gpt

./: .dockerignore  .env.example  .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  firebase.json  main.py  pyproject.toml  requirements-cloudrun.txt  requirements.txt  vaudtax-specialist.skill
.agent/rules/: vaudtax.md
.claude/agents/: ai-extraction-engineer.md  completeness-engine-designer.md  (+5 more)
.firebase/: hosting.cHVibGlj.cache
Vaud Tax Guide/: Dockerfile.ui  package-lock.json  package.json  wrangler.jsonc
demo/: runner.py
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DOMAIN_MODEL.md  RAG_CORPUS.md  RAG_TOPICS.md  ROADMAP.md
scripts/: generate_custom_pdfs.py  smoke_rag_azure.py
tests/: conftest.py  test_api_completeness_shape.py  test_app_state.py  test_azure_deployment.py  test_classify.py  test_cloud_run_deployment.py  test_completeness_engine.py  test_completeness_no_llm_imports.py  test_completeness_rules.py  test_completeness_schema.py  test_config.py  test_demo_runner.py  test_documents_expanded.py  test_embedding_metadata.py  test_explain_view_uses_rag_layer.py  test_extract.py  test_extract_generic.py  test_extraction_imports_lazy.py  test_golden_retrieval.py  test_ingest.py  test_intake_prefill.py  test_interview_engine.py  test_model_router.py  test_navigation.py  test_pdf_anchor.py  test_rag_citations.py  test_rag_replay.py  test_replay_mode.py  test_retriever_metadata.py  test_scraper.py  test_secret_scan.py  test_session_store.py  test_source_verification.py  test_synthetic_pdfs_extract.py  test_tax_fact_schema.py
(+128 files in other folders)
